--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,7 +3,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '11.0'
 
-target 'bodego_mobile' do
+target 'turbografx' do
   config = use_native_modules!
 
   use_react_native!(
@@ -12,7 +12,7 @@ target 'bodego_mobile' do
     :hermes_enabled => false
   )
 
-  target 'bodego_mobileTests' do
+  target 'turbografxTests' do
     inherit! :complete
     # Pods for testing
   end
