--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bodego_mobile",
+  "name": "turbografx",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -14,13 +14,13 @@
     "react-native": "0.66.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
+    "@babel/core": "7.16.0",
+    "@babel/runtime": "7.16.3",
+    "@react-native-community/eslint-config": "2.0.0",
+    "babel-jest": "26.6.3",
     "eslint": "7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.66.2",
+    "jest": "26.6.3",
+    "metro-react-native-babel-preset": "0.66.2",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
