--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -216,6 +216,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    compile project(':react-native-scan-barcode')
 }
 
 // Run this once to be able to run the application with BUCK
