--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,4 @@
 rootProject.name = 'turbografx'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
-include ':app'
+include ':react-native-scan-barcode', ':app'
+project(':react-native-scan-barcode').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-scan-barcode/android')
