--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@freakycoder/react-native-helpers": "^1.0.2",
     "@freakycoder/react-native-material-textfield": "^1.0.0",
+    "@react-native-community/cli-platform-android": "^6.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
@@ -24,8 +25,10 @@
     "react-native-login-screen": "^2.1.4",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-scan-barcode": "^3.1.7",
     "react-native-screens": "^3.9.0",
     "react-native-spinkit": "^1.5.1",
+    "react-native-tesseract-ocr": "^2.0.3",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
@@ -35,6 +38,7 @@
     "babel-jest": "26.6.3",
     "eslint": "7.14.0",
     "jest": "26.6.3",
+    "jetifier": "^2.0.0",
     "metro-react-native-babel-preset": "0.66.2",
     "react-test-renderer": "17.0.2"
   },
