--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@freakycoder/react-native-material-textfield": "^1.0.0",
     "@react-native-community/cli-platform-android": "^6.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^13.0.1",
+    "@react-native-firebase/ml": "^13.0.1",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -22,7 +24,11 @@
     "react-native": "0.66.3",
     "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-crop-picker": "^0.37.2",
+    "react-native-image-picker": "^4.3.0",
     "react-native-login-screen": "^2.1.4",
+    "react-native-mlkit-ocr": "^0.2.3",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-scan-barcode": "^3.1.7",
