--- a/package.json
+++ b/package.json
@@ -10,23 +10,30 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-native-fontawesome": "^0.2.7",
     "@freakycoder/react-native-helpers": "^1.0.2",
     "@freakycoder/react-native-material-textfield": "^1.0.0",
     "@react-native-community/cli-platform-android": "^6.2.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-firebase/app": "^13.0.1",
-    "@react-native-firebase/ml": "^13.0.1",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "global": "^4.4.0",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-androw": "^0.0.34",
     "react-native-camera": "^4.2.1",
+    "react-native-cli": "^2.0.1",
+    "react-native-dynamic-vector-icons": "^1.1.6",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-header-search-bar": "^0.1.10",
     "react-native-image-crop-picker": "^0.37.2",
-    "react-native-image-picker": "^4.3.0",
     "react-native-login-screen": "^2.1.4",
+    "react-native-material-ripple": "^0.9.1",
     "react-native-mlkit-ocr": "^0.2.3",
     "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "^2.2.4",
@@ -34,8 +41,12 @@
     "react-native-scan-barcode": "^3.1.7",
     "react-native-screens": "^3.9.0",
     "react-native-spinkit": "^1.5.1",
+    "react-native-svg": "^12.1.1",
     "react-native-tesseract-ocr": "^2.0.3",
-    "react-navigation-stack": "^2.10.4"
+    "react-native-vector-icons": "^9.0.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "7.16.0",
